--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
 html,
 body {
+  background-color: #171717;
+  color: #ededed;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 a {
@@ -13,4 +20,15 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  user-select: none;
+  background-color:#DA0037;
+  color: white;
+  border-radius: 8px;
+  margin-right: 5px;
 }
